--- a/test1.html
+++ b/test1.html
@@ -6,7 +6,7 @@
     <title>Testing testing testing</title>
 </head>
 <body>
-    <p>hello world</p>
+    <p>Hello world</p>
     <h1>First Heading</h1>
     <h6>Test Heading</h6>
 </body>
